users-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: users-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: users-api

  template:
    metadata:
      labels:
        app: users-api

    spec:
      containers:
      - name: users-api

        image: fenixdevs/users-api:v1

        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080

          initialDelaySeconds: 10
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080

          initialDelaySeconds: 20
          periodSeconds: 10
