users-api/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: users-api-service

spec:
  type: NodePort

  selector:
    app: users-api

  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
